0.5

- Added feature: FileSnipStorage und FileUserStorage to store users and snips in files (properties or XML)
- Refactored Import/Export
- Changed Installation and Setup
- Added feature: Version history of snips
- Added feature: Each post can be a single snip (with comments etc.)
- Developer: Upgrade to Radeox 0.9
- Developer: Moved aspects into container
- Developer: Moved the rest of the XML-RPC handlers into container
- Developer: Upgrade to PicoContainer 1.0-BETA-3
- Improvement: Added edit button to weblog snips 
- Fixed bug: SnipSnap XML-RPC handlers are now authentication protected
- Added feature: Multiple weblogs
- Fixed bug: Reimplemented Weblog
- Added feature: new Snip button for Snip creation
- Fixed bug: removed hard coded references to 'start' with getStartSnip
- Added feature: space encoding (+) is now configurable
- Added feature: File system storage for Snips
- Added feature: Stylesheets are now contained within the SnipSpace
- Developer: Macro, Servlet and ContentRenderer for rendering inline content (PNG, ...)
- Added feature: Rendering MindMaps and Organigrams
- Improvement: New Installer (first time run installs a basic SnipSnap applicaton)
- Fixed bug: cyclic dependency temp. fixed for component loading
- Added feature: Snips can be displayed as RDF
- Developer: Added interfaces for XML-RPC webservices (MetaWeblog, ...) and stuffed this in Pico
- Developer: Moved more stuff to Pico
- Added feature: Support for NameFormatters to change the look of snip names (like capitalize etc.)
- Added feature: RenderEngineLabel allows to set a different engine for a snip
- Fixed bug: display login warning instead of edit field when snip auto-create is on
- Fixed bug: attachment download working with deep namespace now
- Added feature: RenderEngineLabel to change rendering of content
- Added feature: /robots.txt editable via Snip
- Added feature: moved configuration settings into SnipSpace
- Added feature: Installer for WAR (w/ Localization)